<resources>
    <string name="app_name">Project Manager</string>

    <string name="enter_project">Enter</string>
    <string name="placeholder_description">A description of the project</string>
    <string name="placeholder_name">Name</string>
    <string name="project_title_placeholder">Project Title</string>
    <string name="project_description_placeholder">A Very Cool Description!</string>
    <string name="placeholder_welcome">Welcome, %s</string>
    <string name="new_project_title">Create New Project</string>
    <string name="project_name_hint">Project Name…</string>
    <string name="project_name_prompt">Project Name:</string>
    <string name="create_project_button">Create Project</string>
    <string name="shared_preferences_name">redsponge_proj_app_pref</string>
    <string name="view_invites">View Invites! (%d)</string>
    <string name="your_invitations_placeholder">Your Invitations (%d):</string>
    <string name="placeholder_invite_from">From: %s</string>
    <string name="unmatching_passwords_error">Passwords don\'t match!</string>
    <string name="username_taken_error">Username taken!</string>
    <string name="project_name_empty_error">Name cannot be empty!</string>
    <string name="leave_project_text">Leave Project</string>
    <string name="category_name_placeholder">Category Name (0)</string>
    <string name="new_event_title">Create New Event</string>
    <string name="date_text_view_preview">dd/mm/yyyy</string>
    <string name="nearest_project_event_preview">Nearest Project Event:\n%s</string>


</resources>
