<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="8">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp" android:layout_weight="1" android:text="@string/new_project_title" android:gravity="center"
        android:textSize="32sp" android:fontFamily="monospace"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp" android:layout_weight="6.2"
        android:padding="5dp"
        >
        <TableRow>
            <TextView android:text="@string/project_name_prompt" style="@style/InputText"/>
            <EditText android:layout_width="match_parent" android:hint="@string/project_name_hint" android:inputType="text" android:id="@+id/projectNameInput"/>
        </TableRow>
    </TableLayout>
    
    
    <Button
        android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="0.8"
        android:layout_marginRight="50dp" android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp" android:layout_marginBottom="10dp"
        android:text="@string/create_project_button" android:textSize="24sp"
        android:onClick="createProject"/>
</LinearLayout>