<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="4"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="3"
        android:layout_height="match_parent" android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/projectName" android:text="@string/placeholder_name" android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/projectDescription" android:text="@string/placeholder_description"/>
    </LinearLayout>

    <Button
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content" android:id="@+id/gotoButton" android:text="@string/enter_project" android:textSize="14sp"/>
</LinearLayout>